# xHacking

./: .gitignore  CMakeLists.txt  README.md
examples/: CONSOLE_api.cpp  DLL_detours.cpp
include/: xHacking.h
include/API/: API.h
include/Detour/: Detour.h  Detour_i.h
include/Loader/: Loader.h
include/Memory/: Memory.h
include/Remote/: Remote.h
include/Utilities/: Utilities.h
include/xhacking/: xHacking.h
include/xhacking/API/: API.h
include/xhacking/Detour/: Detour.h  Detour_i.h
include/xhacking/Loader/: Loader.h
include/xhacking/Memory/: Memory.h
include/xhacking/Remote/: Remote.h
include/xhacking/Utilities/: Utilities.h
lib/: xHacking.lib  xHacking64_d.lib  xHacking_d.lib
msvc/: ReadMe.txt  xHacking.vcxproj.filters
solution/: xHacking.sln  xHacking.vcxproj
src/: CMakeLists.txt  config.cmake.in  xHacking.cpp
src/Detour/: Detour.cpp  Detour64.cpp
src/Loader/: Loader.cpp
src/Memory/: Memory.cpp
src/Remote/: Remote.cpp
src/Utilities/: Utilities.cpp
